--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	"require-dev": {
 		"phpunit/phpunit": "4.3.*",
 		"phpspec/phpspec": "~2.0",
-		"behat/behat": "~3.0"
+		"behat/behat": "~3.0",
+		"squizlabs/php_codesniffer": "~2.3"
 	},
 	"require": {
-		"squizlabs/php_codesniffer": "~2.3"
 	}
 }
